modulo de pendura

--- a/src/app/venda/components/venda/venda.component.html
+++ b/src/app/venda/components/venda/venda.component.html
@@ -7,4 +7,5 @@
       <app-bt-card [title]="produto.nome" [subtitle]="produto.preco"></app-bt-card>
     </div>
   </div>
+  <button type="button" class="btn btn-primary mt-2" routerLink="/pagar">Pagar</button>
 </div>
