--- a/src/app/venda/components/venda/venda.component.html
+++ b/src/app/venda/components/venda/venda.component.html
@@ -1,12 +1,22 @@
-<p>
-  Venda
-</p>
-<div class="container">
+<div class="container-fluid">
   <div class="row">
-    <div class="col-4" *ngFor="let produto of produtos">
-      <app-bt-card [title]="produto.nome" [subtitle]="produto.preco"></app-bt-card>
+    <div class="col-7">
+      <div class="form-group">
+        <label for="searchProducts">Pesquisar produtos</label>
+        <input type="text" class="form-control" id="searchProducts" aria-describedby="searchProductsHelp" [(ngModel)]="termoPesquisaProduto">
+        <small id="searchProductsHelp" class="form-text text-muted">Digite o nome ou código do produto</small>
+      </div>
+      <h4>Produtos cadastrados</h4>
+      <div class="row">
+        <div class="col-4" *ngFor="let produto of produtos | produto : [termoPesquisaProduto]">
+          <app-bt-card [title]="produto.nome" [subtitle]="produto.preco"></app-bt-card>
+        </div>
+      </div>
+    </div>
+    <div class="col-4">
+      Bloco lista itens venda e subtotal venda
     </div>
   </div>
-  <button type="button" class="btn btn-primary mt-2" [routerLink]="['pagar']">Pagar</button>
-  <button type="button" class="btn btn-danger mt-1" [routerLink]="['pendura',venda.id]">Pendura</button>
+  <!--<button type="button" class="btn btn-primary mt-2" [routerLink]="['pagar']">Pagar</button>
+  <button type="button" class="btn btn-danger mt-1" [routerLink]="['pendura',venda.id]">Pendura</button>-->
 </div>
