--- a/src/app/shared/components/bt-card/bt-card.component.html
+++ b/src/app/shared/components/bt-card/bt-card.component.html
@@ -1,7 +1,7 @@
 <div class="card text-center">
   <div class="card-body">
     <h5 class="card-title">{{title}}</h5>
-    <h6 class="card-subtitle mb-2 text-muted">{{subtitle}}</h6>
+    <h6 class="card-subtitle mb-2 text-success">{{subtitle | currency : 'BRL'}}</h6>
     <p class="card-text">{{text}}</p>
   </div>
 </div>
