--- a/src/app/venda/components/venda/venda.component.html
+++ b/src/app/venda/components/venda/venda.component.html
@@ -13,8 +13,15 @@
         </div>
       </div>
     </div>
-    <div class="col-4">
-      Bloco lista itens venda e subtotal venda
+    <div class="col-5">
+      <app-itens-venda [itens]="venda.itensVenda"></app-itens-venda>
+      <hr class="m-0" />
+      <div class="col-12">
+        <div class="row bg-success text-white font-weight-bold totais">
+          <span class="col-6">Total </span>
+          <span class="col-6 text-right">{{venda.total | currency : 'BRL'}}</span>
+        </div>
+      </div>
     </div>
   </div>
   <!--<button type="button" class="btn btn-primary mt-2" [routerLink]="['pagar']">Pagar</button>
