--- a/src/app/venda/components/venda/venda.component.html
+++ b/src/app/venda/components/venda/venda.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <div class="row">
-    <div class="col-7">
+    <div class="col-md-7">
       <div class="form-group">
         <label for="searchProducts">Pesquisar produtos</label>
         <input type="text" class="form-control" id="searchProducts" aria-describedby="searchProductsHelp" [(ngModel)]="termoPesquisaProduto">
@@ -8,12 +8,12 @@
       </div>
       <h4>Produtos cadastrados</h4>
       <div class="row">
-        <div class="col-4" *ngFor="let produto of produtos | produto : [termoPesquisaProduto]">
+        <div class="col-md-4 mb-3" *ngFor="let produto of produtos | produto : [termoPesquisaProduto]">
           <app-bt-card [title]="produto.nome" [subtitle]="produto.preco"></app-bt-card>
         </div>
       </div>
     </div>
-    <div class="col-5">
+    <div class="col-md-5 mb-3">
       <app-itens-venda [itens]="venda.itensVenda"></app-itens-venda>
       <hr class="m-0" />
       <div class="col-12">
