--- a/src/app/venda/components/venda/itens-venda/itens-venda.component.html
+++ b/src/app/venda/components/venda/itens-venda/itens-venda.component.html
@@ -4,6 +4,7 @@
       <tr>
         <th scope="col">#</th>
         <th scope="col" class="text-center">Quantidade</th>
+        <th scope="col" class="text-center">Item</th>
         <th scope="col" class="text-right">Preço</th>
         <th scope="col" class="text-right">Total</th>
       </tr>
@@ -13,8 +14,8 @@
         <th scope="row">{{i+1}}</th>
         <td class="text-center">{{item.quantidade}}</td>
         <td>{{item.produto.nome}}</td>
-        <td class="text-right">{{item.valor | currency : 'BRL'}}</td>
-        <td class="text-right">{{item.total | currency : 'BRL'}}</td>
+        <td class="text-right">{{item.produto.preco | currency : 'BRL'}}</td>
+        <td class="text-right">{{item.quantidade * item.produto.preco| currency : 'BRL'}}</td>
       </tr>
     </tbody>
   </table>
