Exibido total da venda e implementado atualização da lista de itens ao adicionar um novo item

--- a/src/app/venda/components/venda/venda.component.html
+++ b/src/app/venda/components/venda/venda.component.html
@@ -19,7 +19,7 @@
       <div class="col-12">
         <div class="row bg-success text-white font-weight-bold totais">
           <span class="col-6">Total </span>
-          <span class="col-6 text-right">{{venda.total | currency : 'BRL'}}</span>
+          <span class="col-6 text-right">{{totalVenda | currency : 'BRL'}}</span>
         </div>
       </div>
     </div>
