--- a/src/app/venda/components/venda/venda.component.html
+++ b/src/app/venda/components/venda/venda.component.html
@@ -14,7 +14,7 @@
       </div>
     </div>
     <div class="col-md-5 mb-3">
-      <app-itens-venda [itens]="venda.itensVenda"></app-itens-venda>
+      <app-itens-venda [itens]="venda.itensVenda" (itemRemoved)="onItemRemoved($event)"></app-itens-venda>
       <hr class="m-0" />
       <div class="col-12">
         <div class="row bg-success text-white font-weight-bold totais">
@@ -37,10 +37,11 @@
       <input type="number"
       class="form-control"
       formControlName="quantidade"
-      placeholder="1"
       min="0"
+      value="1"
       [max]="produto.quantidadeEstoque">
     </div>
+    <span><small class="text-danger d-block mt-2" *ngIf="addForm.get('quantidade').errors">A quantidade não pode ser {{addForm.get('quantidade').value}}</small></span>
 
     <button type="submit" [disabled]="addForm.invalid" class="btn btn-primary mt-2 mr-2">Adicionar</button>
     <button type="button" (click)="addModal.close()" class="btn btn-danger mr-2 mt-2">Cancelar</button>
