--- a/src/app/dashboard/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard/dashboard.component.html
@@ -1,9 +1,28 @@
-<p>
-  dashboard works!
-</p>
-<button class="btn btn-primary mb-2 ml-2" (click)="createVendaAvulsa()">Venda Avulsa</button>
-<ul class="list-group flush">
-  <li *ngFor="let mesa of (mesas$ | async); let i = index" class="list-group-item" (click)="createVenda(mesa)">
-    <span>Mesa {{i + 1}} - {{!mesa.venda ? "Livre": "Ocupada"}}</span>
-  </li>
-</ul>
+<div class="container-fluid">
+  <button class="btn btn-primary mb-2 ml-2" (click)="createVendaAvulsa()">Venda Avulsa</button>
+  <h4 class="col-12 text-center">MESAS</h4>
+  <div class="row">
+    <p class="col-2">
+      <i class="fa fa-circle fa-1-x text-danger mr-2"></i>
+      <span>Mesas
+        <strong class="bold">ocupadas</strong>
+      </span>
+    </p>
+    <p class="col-2">
+      <i class="fa fa-circle fa-1-x text-success mr-2"></i>
+      <span>Mesas
+        <strong class="bold">livres</strong>
+      </span>
+    </p>
+  </div>
+  <div class="row">
+    <div class="col-2 mb-4" *ngFor="let mesa of (mesas$ | async); let i = index">
+      <div class="card text-center" [ngClass]="!mesa.venda ? 'alert-success card-mesa-vazia' : 'alert-danger card-mesa-ocupada'"
+        (click)="createVenda(mesa)">
+        <div class="card-body">
+          <h5 class="card-title m-0 p-3">MESA {{i + 1}}</h5>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
