--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~ngx-smart-modal/ngx-smart-modal";
+body{
+    background-color: #f5f5f5;
+}
