--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark primary-color-dark">
+<mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark primary-color-dark mb-3">
   <mdb-navbar-brand>
     <a class="navbar-brand" routerLink="mesas">Bartech</a>
   </mdb-navbar-brand>
