--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,10 @@
 <mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark primary-color-dark mb-3">
   <mdb-navbar-brand>
-    <a class="navbar-brand" routerLink="mesas">Bartech</a>
+    <a class="navbar-brand" routerLink="mesas">
+        <img src="src/assets/img/logo.png" height="41" width="100" alt="Bartech">
+    </a>
   </mdb-navbar-brand>
+  
   <links>
     <ul class="navbar-nav mr-auto">
       <li class="nav-item" routerLinkActive="active">
