--- a/src/app/venda/components/venda/venda.component.html
+++ b/src/app/venda/components/venda/venda.component.html
@@ -25,7 +25,7 @@
           </div>
         </div>
       </div>
-      <button type="button" class="btn btn-danger col-md-5 ml-0" (click)="cancelVenda()" [disabled]="this.venda.itensVenda?.length !== 0">Cancelar</button>
+      <button type="button" class="btn btn-danger col-md-5 ml-0" (click)="cancelVenda()">Cancelar</button>
       <button type="button" class="btn btn-primary pull-right col-md-5 mr-0">Encerrar</button>
     </div>
   </div>
