--- a/src/app/pagamento/components/pagamento/pagamento.component.html
+++ b/src/app/pagamento/components/pagamento/pagamento.component.html
@@ -3,25 +3,26 @@
     <div class="col-md-3">
       <div class="form-group">
         <label for="valuePayment">Valor do Pagamento</label>
-        <input type="text" class="form-control" id="valuePayment" aria-describedby="valuePaymentHelp" [(ngModel)]="pagamento.valor">
+        <input type="number" class="form-control" id="valuePayment" aria-describedby="valuePaymentHelp" placeholder="0" [(ngModel)]="pagamento.valor" mask="0*.00">
       </div>
     </div>
     <div class="col-md-6">
       <div class="form-group">
-        <label for="formasDePagamentos">Valor do Pagamento</label>
+        <label for="formasDePagamentos">Forma do Pagamento</label>
         <select class="form-control" [(ngModel)]="pagamento.formaPagamento">
-          <option value="DINHEIRO">Dinheiro</option>
+          <option value="DINHEIRO" selected >Dinheiro</option>
           <option value="CARTAO">Cartão</option>
+          <option value="PEDURA">Pendura</option>
         </select>
       </div>
     </div>
     <div class="col-md-3">
-      <button type="button" class="btn btn-primary" (click)="adicionarPagamento()">Adicionar</button>
+      <button type="button" class="btn btn-primary mt-4" (click)="adicionarPagamento()">Adicionar</button>
     </div>
   </div>
 </div>
 <div class="card">
-  <div class="col-12">
+  <div class="col-12 mt-2 mb-1">
     <div class="row">
       <div class="col-6">
         <h4>Pagamentos</h4>
