Adicionado opção de rota no menu para visualizar os clientes pendurados.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,18 @@
 <mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark primary-color-dark">
   <mdb-navbar-brand>
     <a class="navbar-brand" routerLink="mesas">
-        <img src="assets/img/logo.png" height="41" width="100" alt="Bartech">
+      <img src="assets/img/logo.png" height="41" width="100" alt="Bartech">
     </a>
   </mdb-navbar-brand>
-  
+
   <links>
     <ul class="navbar-nav mr-auto">
       <li class="nav-item" routerLinkActive="active">
         <a class="nav-link waves-light" mdbWavesEffect routerLink="mesas">Mesas
+        </a>
+      </li>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link waves-light" mdbWavesEffect routerLink="pagamento/pendurados">Clientes Pendurados
         </a>
       </li>
     </ul>
