--- a/src/app/pagamento/components/pendura/penduras-bebum/penduras-bebum.component.html
+++ b/src/app/pagamento/components/pendura/penduras-bebum/penduras-bebum.component.html
@@ -1,3 +1,31 @@
-<p>
-  penduras-bebum works!
-</p>
+<div class="col-12 mt-3">
+  <h4>Clientes com penduras</h4>
+  <div class="card">
+    <div class="table-responsive">
+      <table class="table table-sm table-hover">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">Cliente</th>
+            <th scope="col" class="text-center">CPF</th>
+            <th scope="col" class="text-center">Telefone</th>
+            <th scope="col" class="text-center">Total de Penduras</th>
+            <th scope="col" class="text-center">Total de Pagamentos em Penduras</th>
+            <th scope="col" class="text-center">Saldo</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let cliente of pendurados; let i = index ">
+            <th scope="row">{{i+1}}</th>
+            <td>{{cliente.apelido}} - {{cliente.nome}}</td>
+            <td class="text-center">{{cliente.cpf}}</td>
+            <td class="text-center">{{cliente.telefone}}</td>
+            <td class="text-center">{{totalPenduras | currency : 'BRL'}}</td>
+            <td class="text-center">{{totalPagamentosEmPenduras | currency : 'BRL'}}</td>
+            <td class="text-center">{{saldoPendura | currency : 'BRL'}}</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
