Ajustado cards de produtos na página de venda para exibir o código do produto e sua quantidade em estoque.

--- a/src/app/shared/components/bt-card/bt-card.component.html
+++ b/src/app/shared/components/bt-card/bt-card.component.html
@@ -1,7 +1,9 @@
-<div class="card text-center">
+<div class="card">
   <div class="card-body">
-    <h5 class="card-title">{{title}}</h5>
-    <h6 class="card-subtitle mb-2 text-success">{{subtitle | currency : 'BRL'}}</h6>
-    <p class="card-text">{{text}}</p>
+    <div class="card-title">
+      <span>{{title}}</span>
+    </div>
+    <div class="card-subtitle mb-2 text-success">{{subtitle | currency : 'BRL'}}</div>
+    <div class="card-text">Qtde em Estoque: {{text}}</div>
   </div>
 </div>
