Criado componente gerencia-produtos.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,11 @@
         </a>
       </li>
       <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link waves-light" mdbWavesEffect routerLink="pagamento/pendurados">Clientes Pendurados
+        <a class="nav-link waves-light" mdbWavesEffect routerLink="pagamento/pendurados">Pendurados
+        </a>
+      </li>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link waves-light" mdbWavesEffect routerLink="venda/produtos">Produtos
         </a>
       </li>
     </ul>
