--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,6 +19,10 @@
         <a class="nav-link waves-light" mdbWavesEffect routerLink="venda/produtos">Produtos
         </a>
       </li>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link waves-light" mdbWavesEffect routerLink="pagamento/clientes">Clientes
+        </a>
+      </li>
     </ul>
   </links>
 </mdb-navbar>
